# FFmpegPlayer

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/hechuangwu/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hechuangwu/ffmpegplayer/: MainActivity.java
app/src/main/java/com/hechuangwu/ffmpegplayer/activity/: AudioActivity.java  MainActivity.java  VideoActivity.java
app/src/main/java/com/hechuangwu/ffmpegplayer/utls/: TimeUtils.java  Utils.java
app/src/main/res/layout/: activity_audio.xml  activity_main.xml  activity_video.xml  seconds.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/hechuangwu/ffmpegplayer/: ExampleUnitTest.java
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/com/hechuangwu/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: AndroidLog.h  FfAudio.cpp  FfAudio.h  FfCallBcak.cpp  FfCallBcak.h  FfQueue.cpp  FfQueue.h  Ffmpeg.cpp  Ffmpeg.h  androidlog.h  ffaudio.cpp  ffaudio.h  ffbufferqueue.cpp  ffbufferqueue.h  ffcallback.cpp  ffcallback.h  ffmpeg.cpp  ffmpeg.h  ffplayer.cpp  ffqueue.cpp  ffqueue.h  native-lib.cpp  pcmbean.cpp  pcmbean.h
player/src/main/java/com/hechuangwu/player/: ChannelEnum.java
player/src/main/java/com/hechuangwu/player/ffplayer/: FFPlayer.java  FfPlayer.java
player/src/main/java/com/hechuangwu/player/listener/: OnPlayerListener.java
player/src/main/java/com/hechuangwu/player/log/: MyLog.java
player/src/main/java/com/hechuangwu/player/utils/: Utils.java
player/src/test/java/com/hechuangwu/player/: ExampleUnitTest.java
